# opt-napari

./: .gitignore  README.md  Untitled.ipynb  codecov.yml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml  test-plugin.yml
napari-correctDark/: setup.cfg
napari-correctDark/napari_correctDark/: __init__.py  napari.yaml  widget_funcs.py
napari-correctDark/napari_correctDark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari-fbpCPU/: setup.cfg
napari-fbpCPU/napari_fbpCPU/: __init__.py  napari.yaml  widget_funcs.py
napari-fbpCPU/napari_fbpCPU.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari-selectROI/: setup.cfg
napari-selectROI/napari_selectROI/: __init__.py  napari.yaml  widget_funcs.py
napari-selectROI/napari_selectROI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src_all/: __init__.py  _qtwidget.py  _qtwidget_rename.py  _widget.py  backtrack.py  correction_funcs.py  corrections.py  plotting.py  sandbox.ipynb  to_be_used.py  utils.py  widget_settings.py
src_all/_test/: conftest.py  test_backtrack.py  test_corr.py  test_utils.py  test_widget.py  test_widget_qtbot.py
src_all/sandbox/: _widget.py  sandbox.ipynb
src_all/test/: test_corr.py  test_utils.py
