[metadata]
name = napari-opt-preprocessor
version = 0.0.1
author = David Palecek, Giorgia Tortora
author_email = david@stanka.de


url = https://github.com/palec87/opt-napari
project_urls =
    Bug Tracker = https://github.com/palec87/opt-napari/issues

license = BSD-3-Clause
description = Plugin to preprocess OPT/tomography data before reconstruction.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.8


[flake8]
max-line-length = 100
ignore = E203,W503,C901,F823
max-complexity = 18
builtins = pytest
exclude = src_all/__init__.py, src_all/sample_data, src_all/sandbox
banned-modules = PyQt5 = use qtpy
    PySide2 = use qtpy

install_requires =
    napari-plugin-engine>=0.1.4
    numpy>=1.21,<=1.23.5
    matplotlib
    qtpy
    dask
    napari
    magicgui